@@ -108,6 +108,7 @@ production.
   stored in the database.
 * (bug 47219) Allow specifying change type of Wikipedia feed items
 * prop=imageinfo now allows setting iiurlheight without setting iiurlwidth
+* prop=info now adds the content model of the title.
 
 === Languages updated in 1.22===
 
